y.output

state 0
	$accept: .any_command $end 

	CREATE  shift 3
	.  error

	create_sharding_column_stmt  goto 2
	any_command  goto 1

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  create_sharding_column_stmt.semicolon_opt 
	semicolon_opt: .    (2)

	';'  shift 5
	.  reduce 2 (src line 70)

	semicolon_opt  goto 4

state 3
	create_sharding_column_stmt:  CREATE.SHARDING COLUMN sharding_column_name 

	SHARDING  shift 6
	.  error


state 4
	any_command:  create_sharding_column_stmt semicolon_opt.    (1)

	.  reduce 1 (src line 63)


state 5
	semicolon_opt:  ';'.    (3)

	.  reduce 3 (src line 72)


state 6
	create_sharding_column_stmt:  CREATE SHARDING.COLUMN sharding_column_name 

	COLUMN  shift 7
	.  error


state 7
	create_sharding_column_stmt:  CREATE SHARDING COLUMN.sharding_column_name 

	STRING  shift 9
	.  error

	sharding_column_name  goto 8

state 8
	create_sharding_column_stmt:  CREATE SHARDING COLUMN sharding_column_name.    (13)

	.  reduce 13 (src line 117)


state 9
	sharding_column_name:  STRING.    (12)

	.  reduce 12 (src line 112)

Rule not reduced: reserved_keyword:  POOLS 
Rule not reduced: reserved_keyword:  DATABASES 
Rule not reduced: reserved_keyword:  CLIENTS 
Rule not reduced: reserved_keyword:  SERVERS 
Rule not reduced: reserved_keyword:  STATS 
Rule not reduced: show_statement_type:  reserved_keyword 
Rule not reduced: kill_statement_type:  reserved_keyword 
Rule not reduced: show_stmt:  SHOW show_statement_type 
Rule not reduced: kill_stmt:  KILL kill_statement_type 

25 terminals, 10 nonterminals
15 grammar rules, 10/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 3/240000
0 extra closures
5 shift entries, 1 exceptions
9 goto entries
-5 entries saved by goto default
Optimizer space used: output 10/240000
10 table entries, 1 zero
maximum spread: 25, maximum offset: 25
